fixed affix z-index problem

--- a/prime/static/prime/scss/navbar.scss
+++ b/prime/static/prime/scss/navbar.scss
@@ -73,7 +73,7 @@
 
 // Affixed Navbar for Some Articles
 #affix {
-	z-index: 1000;
+	z-index: 100000;
 	background-color: black;
 	.container-fluid {
 		.navbar-collapse {
